--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space+Mono|Special+Elite|Muli">
 </head>
 
-<body>
-  Hello world
+<body style="background-color: #f9eee1;">
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="books.html">Books</a></li>
+  <li><a href="study.html">Study</a></li>
+</ul>
+<p class="Heading"">Home Page</p>
+  <img src="images/bookimage.png" style="width:100%; max-width:370px; height:auto; float:right;padding-right:30px;">
+  <p class="text"> Homework is one of the few constants in my life. So why make it harder than it has to be? Enjoying something while you do it helps you not only make the task go by faster, but also makes your work better. Even if you have no homework or work to do, loading up a book to read or playing a some calming music can really help you performance during the day. I personally enjoy reading, writing, amd listening to music. This is a place one can go when the world gets to be too much, even if you just want to think, read, or double check assignments, this can help. To help organise one's life, and give you a little headspace to think. </p>
+  <br>
+  <br>
+  <h1 class="quote">"Education is the most powerful weapon, which you can use to change the world." - Nelson Mandala</h1>
   <script src="script.js"></script>
 
- <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
 </body>
 
 </html>
