--- a/books.html
+++ b/books.html
@@ -10,13 +10,66 @@
 </head>
 
 <body style="background-color: #f9eee1;">
-<ul>
+<ul class="nav">
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="books.html">Books</a></li>
   <li><a href="study.html">Study</a></li>
 </ul>
 <p class="Heading"">Books</p>
- <p class="text" style="float: right;">One of my favorite hobbies is reading; being transported into another world with each and every word I read. It takes you away from the world you are currrently in and takes you to a place full of magic, mystery, thrills, action, suspence, ect. For me it is the perfect way to just calm down and take a break from the world. Here are some of my favorite books, authors, and just music to think or read to. Setting aside time to just take a break from the world and dive into another one is something</p>
-</body>
+  <img src="images/worldimage.png" style="float:left; width: 100%; max-width: 500px; height: auto; filter:contrast(130%);">
+ <p class="text" style="text-align:right; margin-left: 550px; margin-right:40px;">One of my favorite hobbies is reading; being transported into another world with each and every word I read. It takes you away from the world you are currrently in and takes you to a place full of magic, mystery, thrills, action, suspence, ect. For me it is the perfect way to just calm down and take a break from the world. Here are some of my favorite books, authors, and just music to think or read to. Setting aside time to just take a break from the world and dive into another one is something I've always done. It's an easy way to just recharge and clear your mind.</p>
 
+<p class="text" style="text-align:right; margin-left: 550px; margin-right:40px;">Some books I would really like to read are; The trone of glass series,The hawthorne lagacy, The final gamit, and a tale of sorcerery. My favorite author is Chris Colford and I really like all his books, I think they're really captivating and makes you need to keep turning the page. My favorite genres of books are fantasy, action, and mystery. I love being really exited about what the character is going through and needing to find out what happens next.</p>
+
+  <img src="images/Hp.png" style="margin-left: 400px; width: 100%; max-width: 500px; height: auto; filter:contrast(130%); border-radius: 10%;">
+  <br>
+  <br>
+  <br>
+  </be>
+  <a href="https://docs.google.com/document/d/1x5yyvkqh7RxxicyfxZGCl4SiP-s_UFwyuAu7Z2zQToE/edit" class="button">Story</a>
+
+  
+  <div class="container">
+			<ul class="align">
+				<li>
+					<figure class='book'>
+
+						<!-- Front -->
+						<ul class='hardcover_front'>
+							<li>
+								<img src="https://th.bing.com/th/id/OIP.UH35p902bZ-GzYWPWizT-AHaJ4?pid=ImgDet&rs=1" alt="Books" width="100%" height="100%">
+							</li>
+							<li></li>
+						</ul>
+
+						<!-- Pages -->
+						<ul class='page'>
+							<li></li>
+							<li>
+								<img src="images/Reading.jpg" alt="" width="100%" height="100%">
+							</li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+
+						<!-- Back -->
+						<ul class='hardcover_back'>
+							<li></li>
+							<li></li>
+						</ul>
+						<ul class='book_spine'>
+							<li></li>
+							<li></li>
+						</ul>
+						<figcaption>
+							<h1>Reading</h1>
+							<span>Marina Kania</span>
+							<p>...books</p>
+						</figcaption>
+					</figure>
+				</li>
+			</ul>
+	</div>
+ </body>
 </html>
