--- a/study.html
+++ b/study.html
@@ -15,8 +15,50 @@
   <li><a href="books.html">Books</a></li>
   <li><a class="active" href="study.html">Study</a></li>
 </ul>
+
+  
 <p class="Heading"">Study</p>
- 
+
+  <p class="text"> No matter who you are, or what you do, everyone needs a place to settle down and get some work done. Hear is some music to listen to while you crunch those numbers, finish that report, or complete you last school asignment. </p>
+  
+<div class="dropdown">
+  <img src="images/calander2.png" alt="Calender" width="400" height="350">
+  <div class="dropdown-content">
+  <img src="images/calander2.png" alt="Calender" width="700" height="500">
+  </div>
+</div>
+<a href="https://classroom.google.com/" class="button">Google Classroom</a>
+  <a href="https://drive.google.com/drive/my-drive" class="button">Google Drive</a>
+  
+  <h4>Music to study to</h4>
+<div class="gallery">
+  <a target="_blank" href="https://www.youtube.com/watch?v=TURbeWK2wwg&list=LL&index=2&t=2894s">
+    <img src="images/reading in rain.jpg" alt="Lopi music" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://www.youtube.com/watch?v=BQrxsyGTztM&list=WL&index=3&t=2364s">
+    <img src="images/Reading.jpg" alt="Hp music" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://www.youtube.com/watch?v=acsLxmnjMho&list=WL&index=7">
+    <img src="images/study.jpg" alt="Magic sounds" width="600" height="400">
+  </a>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="https://www.youtube.com/watch?v=1fueZCTYkpA">
+    <img src="images/work.jpg" alt="Lofi music" width="600" height="400">
+  </a>
+</div> 
+<br>
+<br>
+  <br>
+  <br>
+
 </body>
 
 </html>
